--- a/_posts/other/2023-09-07-formalreview2023.md
+++ b/_posts/other/2023-09-07-formalreview2023.md
@@ -256,36 +256,17 @@ I will outline the main premise of three main chapters that outline the key find
 
 During data analysis I used Rogoff's [-@rogoff_observing_1995-1] three planes / foci of personal, social and community to help focus and organise observational notes. The model which problematises the dichotomy of learner led, teacher led approaches [@mascolo_beyond_2009] suited the space between formal and informal learning that this community based model of game making occupies.
 
-The foundation of this research is a design-based research approach which is underlined by Activity Theory (AT) as a conceptual framework.
+The foundation of this research is a design-based research approach which is underlined by Activity Theory (AT) as a conceptual framework. The use of activity theory as an underlying conceptual framework in used together with design-based research methodology and the elements of 3GAT to explore tensions and resolutions in emerging activity.
 
-The use of activity theory as an underlying conceptual framework in used together with design-based research methodology and the elements of 3GAT to explore tensions and resolutions in emerging activity.
+CHAT relies on analysis of systemic tensions in activity and culture [@barab_using_2002]. Tensions in the emerging design and the experience of participant conflict in activity systems served to drive the evolution of this learning design. I have also drawn on research which distinguishes type of learner agency including transformative, authorial and instrumental agency. The work of Sannino on the use of secondary stimulation in formative interventions informs the analysis of conflicts arising and secondary tools and processes which facilitators use to address them [@sannino_activity_2011]. Thus Sannino's concept TADS, transformative agency through double stimulation, addresses the potential for participants to leverage external tools to influence their experience in learning activities.
 
-However presenting emerging results within this extensive framework are complicated if trying to follow the prescriptive nature of 3GAT as a formative, developmental framework [@bakhurst_reflections_2009; @spinuzzi_trying_2020].
+This has influenced how I am presenting my findings as I found that attempting to describe tensions framework were cumbersome when attempting to follow the prescriptive nature of 3GAT in a complete fashion. Instead, led by more recent understandings of conflict and transformation explored by Sannino and colleagues with TADS research [@engestrom_transformative_2022; @sannino_transformative_2022-1], I am focusing on more in depth explorations of key facilitator tensions and conflicts experienced by participants.  
 
-I have drawn on research which distinguishes type of learner agency including transformative, authorial and instrumental agency.
+#### Analysis of video data
 
-Tensions in the emerging design and the experience of participant conflict in activity systems served to drive the evolution of this learning design.
+To allow for a greater depth of analysis I opted to analyse 12 video recordings in depth from 5 key game making sessions in greater detail rather than 60 video recordings from 12 sessions in a more summative fashion. In the last review I outlined that I am exploring alternatives to coding video data in the Nvivo software package due to its limitations in playing and reviewing video data and the large amount of video data I am dealing with. I have adopted a process for coding and describing section which breaks video segments into 5 minute pieces and use a word document template to record notes which can later be imported into Nvivo for analysis. This process also allows me to use free software to synchronise and view video and data from pc capture and wider 360 captured footage.
 
-The work of Sannino on the use of secondary stimulation in formative interventions informs the analysis of conflicts arising and secondary tools and processes which facilitators use to address them [@sannino_activity_2011]. TADS thus addresses transformative agency.
-
-
-
-
-#### Indentifying tensions and motivations
-
-CHAT relies on analysis of systemic tensions in activity and culture [@barab_using_2002]. Initial results relied on data analysis of my journal entries, informal interactions and formal interviews with participants, selection of key vignettes from video recordings and identification of the key features of the supporting resources and learning strategies that I created in response to emerging tensions. While the process of analysing tensions is still underway, I have included a link to emerging observations and responses in the appendix [^5].
-
-#### Coding and analysis of video data
-
-To allow for a greater depth of analysis I opted to anaylse key game making sessions in greater detail rather than all ten in a more summative fashion. Thus to date I have
-
-In the last review I outlined that I am exploring alternatives to coding video data in the Nvivo software package due to its limitations in playing and reviewing video data and the large amount of video data I am dealing with. I have adopted a process for coding and describing section which breaks video segments into 5 minute pieces and use a word document template to record notes which can later be imported into Nvivo for analysis.
-
-This process also allows me to use free software to syncronise and view video and data from pc capture and wider 360 captured footage.
-
-When coding I started with some preset codes from the literature for examples Barron and colleagues' on parent roles when helping digital projects [-@barron_parents_2009]. As coding progressed, I have modified and extended these roles into codes to better match my recorded data.
-
-I also initially drew on design stages as a schema for coding. This proved useful mostly to highlight the .
+When coding I started with some preset codes from the literature for examples Barron and colleagues' on parent roles when helping digital projects [-@barron_parents_2009]. As coding progressed, I have modified and extended these roles into codes to better match my recorded data. I also initially drew on design stages as a schema for coding. This proved useful mostly to highlight that making in this setting rarely followed a recognisable design pattern but was much more spontaneous in nature. Similarly, initial codes that I chose around patterns of participant interaction and activity and the type of game feature they were working on did not prove useful to answer the research questions. In contrast, as data began to emerge on the significance of game design patterns, the use of became useful themes in data analysis. These are presented as a table in the commentary on chapter six below.
 
 ### Commentary on chapter four - Emerging Learning Designs
 
@@ -301,20 +282,15 @@ EXPLAIN A BIT MORE.
 
 ### Overview of chapter five - Seeding and Nurturing Game Making Communities to Facilitate Learner Agency
 
-
 This chapter is concerned with examining the impact on participants of the learning design explored in the last chapter, excluding the more specific work on game design patterns which is explored in the following chapter. While there is an overarching theme of findings surrounding the inclusive methods that are introduce and which emerge, there is still a fair bit of work to do to make the structure of this chapter coherent.
 
-
 The first section examines the impact of a process drama with an aim to establish and nurture community practice. It highlights the value of introducing almost-real processes, near authentic tools and the possibility of learners developing learning identities within a drama frame. The second section examines the impact of core software tools in the initial learning design. Another section explores the community behaviour of the group of game makers and some of the specifics of their design processes. The processes include: emerging use of narratives and graphics which drawing on home funds of knowledge; playtesting as a social process; playtesting and embodied participation in the games of others; community concepts and norming behaviour emerging during playtesting; the development of flexible divisions of labour;
-
-
 
 In the discussion section, the chapter builds on material explored in this chapter in relation to exiting research to explore the development of agency in this learning design. Particular attention is given to processes which support learners to develop agency in the game making process and the role of different levels of authenticity within these processes.
 
 ### Commentary on chapter six - The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 
 Before exploring the contents of this chapter it is useful to insert an extract of the literature review to define game(play) design patterns (GDPs)
-
 
 BEGIN EXTRACT / DEFINITION
 
@@ -331,7 +307,6 @@ Eriksson and colleagues [-@eriksson_using_2019] use the second interpretation re
 Their research, which involved young people, builds on related research with adults with the explicit goal of learning game design. One product of this research is a list of GDP patterns as a public collection (available at http://virt10.itu.chalmers.se/) [@bjork_patterns_2005].
 
 END EXTRACT / DEFINITION
-
 
 The chapter follows the, through necessity to cover more ground, more superficial coverage of more social and cultural aspects of the learning environment to cover the use of game design patterns by participants.
 
