addition to methods something for the discussion

--- a/_posts/other/2023-09-07-formalreview2023.md
+++ b/_posts/other/2023-09-07-formalreview2023.md
@@ -11,27 +11,25 @@ title: Second Formal Review - Year 4 End (part-time PhD) - Mick Chesterman
 
 ## Introduction
 
-The review report will give an update on the progress of my thesis and relevant outputs. In creating this report I have been inspired by the patchwork approach of reflective writing in terms of form [@scoggins_patchwork_1999]. My goal here is to try to best utilise the potential guidance and support of the reviewers of the report in a way which does not divert my time resources away
-
-By far the largest patch is a published book chapter [^1] which is included at the start of this work to situate the process and potential relevance of the study.
-
-It also contains the following material:
+The review report will give an update on the progress of my thesis and relevant outputs. In creating this report I have been inspired by the patchwork approach of reflective writing in terms of form [@scoggins_patchwork_1999]. Extracts and summaries of existing writing and outputs are also framed with reflective commentary. My goal here is to try to best utilise the potential guidance and support of readers of report and to engage with a reflective process at this review point by shifting my perspective to help describe an overall narrative of the thesis a this moment in time.
+<!--
+By far the largest patch is a published book chapter [^1] which is included at the start of this work to situate the process and potential relevance of the study. This report also contains the following material:
 
 - updates on context and dissemination of results
 - updates on methodology and practical approaches to data
 - summaries and links to existing draft chapters of the thesis
-- writing on the potential future directions and existing limitations of this study
+- writing on the potential future directions and existing limitations of this study -->
 
 ## Summary of associated activity since the last review
 
 ### Dissemination of results via presentations and showcase work
 
+In the last report I explained that early dissemination of results had prompted analysis which yielded the 3M pedagogical model .
+
 -  **Presentation at Manchester Games Network Conference 2023:** a presentation focusing in the use of game design patterns (explored later in this report).
 -  **Presentation at Manchester Met PGR Conference 2023:** a presentation giving an overview of the study and context.  
 -  **Partnership showcase with Manchester Science and Industry museam and Manchester Games Network and RISE:** three days of game making and coordinating students in a partnership.  
 
-
-This early dissemination of results prompted a deeper analysis of my existing data in terms of the overarching themes and the 3M pedagogical model emerged from this process.
 
 ### Book chapters in print
 
@@ -100,8 +98,6 @@ When analysing journal notes I drew on observations of strategies and responses 
  <!-- Indeed, the process of developing a community of game makers invites a deeper interpretation of learning roles beyond a binary definition to encompass some of the learning from CoP and Commmunities of Learners where X and Y are the case. -->
 The result of this analysis and responses is the 3M model which is designed to be of use to both teachers and learners. The section outlines the main features of the 3M model[^11], namely _missions, maps and motivational methods_. I will also explain how the methods involved in the model are informed by inclusive pedagogy principles contained in Universal Design for Learning (UDL) and project-based learning (PBL). This learning design can be applied using a variety of game making software. The resources I have created for MakeCode Arcade[^4] and Phaser[^5] are free and open source and available online. I invite other educators to adopt the 3M approach and share resources for Scratch, Pygame, p5.play and other suitable platforms. In the course of game making some elements of the 3M model are more visible to participants than others. The 3M model is presented below in order of this visibility. Missions are used regularly by learners. Maps are used more occasionally as a reflective tool. Finally methods are used by primarily by facilitators in planning session activities.
 
-
-### DETAILS IN THIS SECTION OMMITTED FOR BREVITY -
 
 ### Missions
 
@@ -198,20 +194,7 @@ The following resources exist for text-based coding using the Phaser javascript 
 * A splash page for Phaser / Glitch.com resources. This contains links to print outs, tutorials and activities - https://glitch-game-makers-manual.glitch.me/
 * An interactive starting template and grid of game design patterns that learners can add to the incomplete template - https://ggc-examples.glitch.me/
 
-### Supporting Resource 2: 3M & MakeCode Arcade
-
-The application of the 3M model applied using the MakeCode Arcade software is available online as part of a collaborative online documentation repository. The resource includes a template of a broken game to fix, printable cards offering quick changes to core design patterns, printable documents which describe game design patterns and steps of how to implement them, a map of learning dimensions that learners are likely to encounter when making games, and an adaptable five-week course of activities. All of these resources are available at https://mickfuzz.github.io/makecode-platformer-101
-
-<!-- * A broken game to fix and printable cards offering quick changes to core design patterns. This is the starting activity.[^12]
-* An online interactive grid of all game design patterns which link to more detailed step by step implementation instructions.[^13]
-* Printable online documents which describe game design patterns detail how to implement them.[^14]
-* A map of learning dimensions learners are likely to encounter when making games. These are grouped as coding concepts, systems patterns and design practices.[^15]
-* To suit learners who like a methodical approach, a step by step tutorial explaining how to build game code from first principles is available.[^16]
-* A five week course adaptable by teachers including activities to support the motivational methods detailed above.[^17] -->
-
-### Supporting Resource 3: Other MakeCode Arcade Tutorials
-
-While the above iteration of the 3M Model applies to a Platformer Game, many other genres of games can be made using the MakeCode Arcade software. Many resources and tutorials are available at https://arcade.makecode.com/
+OTHER RESOURCES REMOVED FOR BREVITY
 
 ## Conclusion
 
@@ -229,14 +212,13 @@ One of the purposes of sharing my resources freely is to invite collaboration wi
 
 The the following observations on the different focus of the book chapter above and my ongoing thesis are of note. The book chapter:
 
-- details two code authoring environments whereas the thesis concentrates on one of them (phaser and glitch.com).
-- is has a broader focus on practical pedagogy than the thesi swhic focuses on learner agency within a narrower context of family learning
-- takes a more simplistic view of tensions emerging in the learning environment
+- details two code authoring environments whereas the thesis concentrates on one of them (phaser and glitch.com)
+- is has a broader focus on practical pedagogy than the thesis which focuses on the more novel elements of the broader 3M pedagogy specifically: developing learner agency within a narrower context of family learning and the use of game design patterns
+- takes an uncritical view of tensions from broad school of activity theory compared to the thesis which explores different interpretations in more depth
 
+It is relevant at this point to outline the updated research questions which I am currently using to further integrate my data and existing research.  
 
-It is relevant at this point to outline the updated research questions which emerged from a closer analysis of the the collected data.  
-
-**Research Questions - June 2023**
+**Research Questions - Summer 2023**
 
 1. What pedagogical tools and processes are available to support novices to overcome barriers to game coding and design?
 <!-- - What pedagogical factors are significant to support novices learning coding, particularly in game making contexts? -->
@@ -248,11 +230,11 @@ It is relevant at this point to outline the updated research questions which eme
 
 ## Commentary on key chapters of the thesis
 
-I will outline the main premise of three main chapters that outline the key findings of this study. In addition the following section gives an overview of the data analysis methods underlying methodology utilised.
+I will outline the main premises of four main chapters containing the process and the key findings of this study.
 
 ### Commentary on chapter three - Methods and Data
 
-### Evolution of methodology
+#### Evolution of methodology
 
 During data analysis I used Rogoff's [-@rogoff_observing_1995-1] three planes / foci of personal, social and community to help focus and organise observational notes. The model which problematises the dichotomy of learner led, teacher led approaches [@mascolo_beyond_2009] suited the space between formal and informal learning that this community based model of game making occupies.
 
@@ -270,14 +252,11 @@ When coding I started with some preset codes from the literature for examples Ba
 
 ### Commentary on chapter four - Emerging Learning Designs
 
-Due to the novel nature of the learning design the detailed outline of the evolution and specifics therein are also important to situate findings in the following two chapters.
+Due to the novel nature of the learning design a detailed outline of the evolution and specifics therein are important to situate findings in the following two chapters.This chapter draws four interviews conducted with peer practitioners to expose barriers to digital making activity and tactics to overcome such barriers. The middle section gives an overview of the evolution of the learning design which draws on analysis of participants reactions and contributions, journal notes, and participant interviews. This data is used in combination with analysis of emergent learning resources to describe key facilitator tensions and conflicts experienced by participant.  
 
-This chapter draws on review of literature and from four interviews with peer practitioners to exposes barriers to digital making activity and tactics to overcome such barriers.
+An additional section examines the learning map and physical map elements outlined in the 3M model above. When examining data this material created to suit a more formal settings to help resolve tension between freedom of creative direction and the need to cover key curricula concepts does not feature significantly in the experience of participants. Review of data participants in this study reveals limited data which extensive reflection in my journal notes shows stems from my inconsistency in introducing and facilitating the use of these materials. However, based on the limited use of the materials in this study and from my analysis of existing research and for a wider potential audience in more formal settings, I propose that there is significant potential for these reflective processes and navigational materials.
 
-The middle section gives an overview of the evolution of the learning design which draws on analysis of participants reactions and contributions from journal notes, and participant interviews and analysis of emergent learning resources to present detailed exploration of key facilitator tensions and conflicts experienced by participant.  
-
-An additional section examines the learning map element outlined in the 3M model above. This section explains the limitations of this study in this area giving a justification that the informal learning environment did not suit more abstract approach.
-EXPLAIN A BIT MORE.
+This section explains the limitations of this study in this area, compared to other elements of the learning design. Currently, this section sits a bit uneasily in this chapter and thus it may be revised or moved to the conclusion. However, the assumptions and approaches seem important as a foil to some of the discussions around flexible, learner-led desing practices explored in the following chapter.
 
 
 ### Overview of chapter five - Seeding and Nurturing Game Making Communities to Facilitate Learner Agency
@@ -334,39 +313,41 @@ _**Gdps as an intermediate level design construct**_
 
 I am compiling notes on the concluding chapter which will explore potential contributions to knowledge yielded by these findings, wider implications for educators and designers and limitations and future possible directions for this work.  
 
-### Implications for designers and educators
-
-From the same presentation at PCR network I began to communicate some of the wider implication and potential for educators. I include the following slide.
-
-**_Implications for designers and educators_**
-
-- Design pattern collections could be useful to facilitate socially driven making.
-- Curated collections that draw on existing experiences of game play are particularly fertile grounds for inclusive and engaging practice.
-- Learners in informal environments can still benefit from peer-design processes with concrete processes and intermediate concepts embedded in GDPs
-- Use of GDPs can help facilitators guide learners to access and navigate more abstract & curriculum concepts.
-- Facilitators can also let users be drawn by their interests and develop their own individual and community responses to the game making challenges.
-
 
 ### Contributions to knowledge
 
 The key contributions include streams of practical contributions to help the process of learning and teaching coding and potential contributions to the field of understandings of agency in this learning context. Specifically the following concepts:
 
- - **The utility of game design patterns in this domain:** In particular the process of leaners drawing on game design patterns and learning designers using them to help their learners navigate the design process.
+ - **The utility of game design patterns in this domain:** In particular the process of leaners drawing on curated collections of game design patterns and learning designers using them to help their learners navigate the design process.
  - **A contribution to understandings of the specifics of family learning dynamics in digital making:** There is rich data to support detailed analysis in this area.
- -
+ - **Game making and FoK:**  This research supports research showing the inclusive value of facilitators encouraging learners to follow their interests and develop their own individual and community responses to the game making challenges.
+
+
+
+ <!-- ### Implications for designers and educators
+
+ From the same presentation at PCR network I began to communicate some of the wider implication and potential for educators. I include the following slide.
+
+ **_Implications for designers and educators_**
+
+ - Design pattern collections could be useful to facilitate socially driven making.
+ - Curated collections that draw on existing experiences of game play are particularly fertile grounds for inclusive and engaging practice.
+ - Learners in informal environments can still benefit from peer-design processes with concrete processes and intermediate concepts embedded in GDPs
+ - Use of GDPs can help facilitators guide learners to access and navigate more abstract & curriculum concepts.
+ - Facilitators can also let users be drawn by their interests and develop their own individual and community responses to the game making challenges. -->
+
+
+
 
 ### Limitations of this study and future directions for related work
 
 The nature of this study as collaborative, emergent and focused lends itself to the kinds of results and contributions as outlined above rather than to
 
-- While a separate program using a different software authoring tools was conducted, the processes are not compared in this thesis. The limited numbers of participants
+- While a separate program using a different software authoring tools was conducted, the processes are not compared in this thesis.
+- The specifics of the home education learning environment are not explored in this study to any great extent.
+- the limited number participants and lack of any specific goals of representation invites follow up research in different settings and using different methods to select participants.
 
-- The specifics of the home education learning environment and my own role as a facilitator are not explored in this study to any great extent.
-
-
-While the danger that the participants are not representative does not detract from the overall potential of this research, it does invite follow up research in different settings and using different methods to select participants.
-
-### Present goals to complete thesis
+<!-- ### Present goals to complete thesis
 
 I include a brief description of my next goals covering the next six months.
 
@@ -379,7 +360,7 @@ I include a brief description of my next goals covering the next six months.
 - Current Research Questions
 - Summary of Data Gathering as Table  http://tiny.cc/data-stages
 -  Tensions emerging and evolving from 3M model
-Online at  http://tiny.cc/3m-tensions
+Online at  http://tiny.cc/3m-tensions -->
 
 
 ## References
