formatting and foot notes

--- a/_posts/other/2023-09-07-formalreview2023.md
+++ b/_posts/other/2023-09-07-formalreview2023.md
@@ -96,7 +96,7 @@ When analysing journal notes I drew on observations of strategies and responses 
 
 <!-- MORE OF AN INTRODUCTION TO DESIGN - WHO IS IT FOR -HOW CAN IT BE USED -->
  <!-- Indeed, the process of developing a community of game makers invites a deeper interpretation of learning roles beyond a binary definition to encompass some of the learning from CoP and Commmunities of Learners where X and Y are the case. -->
-The result of this analysis and responses is the 3M model which is designed to be of use to both teachers and learners. The section outlines the main features of the 3M model[^11], namely _missions, maps and motivational methods_. I will also explain how the methods involved in the model are informed by inclusive pedagogy principles contained in Universal Design for Learning (UDL) and project-based learning (PBL). This learning design can be applied using a variety of game making software. The resources I have created for MakeCode Arcade[^4] and Phaser[^5] are free and open source and available online. I invite other educators to adopt the 3M approach and share resources for Scratch, Pygame, p5.play and other suitable platforms. In the course of game making some elements of the 3M model are more visible to participants than others. The 3M model is presented below in order of this visibility. Missions are used regularly by learners. Maps are used more occasionally as a reflective tool. Finally methods are used by primarily by facilitators in planning session activities.
+The result of this analysis and responses is the 3M model which is designed to be of use to both teachers and learners. The section outlines the main features of the 3M model[^1], namely _missions, maps and motivational methods_. I will also explain how the methods involved in the model are informed by inclusive pedagogy principles contained in Universal Design for Learning (UDL) and project-based learning (PBL). This learning design can be applied using a variety of game making software. The resources I have created for MakeCode Arcade[^2] and Phaser[^3] are free and open source and available online. I invite other educators to adopt the 3M approach and share resources for Scratch, Pygame, p5.play and other suitable platforms. In the course of game making some elements of the 3M model are more visible to participants than others. The 3M model is presented below in order of this visibility. Missions are used regularly by learners. Maps are used more occasionally as a reflective tool. Finally methods are used by primarily by facilitators in planning session activities.
 
 
 ### Missions
@@ -121,9 +121,9 @@ Your mission is to apply the following pattern to your game. There are supportin
 
 * **Need for Pattern:** Enemies create challenge and being able to jump on an enemy is a good way of clearing the area you want to explore.
 
-* **Coding Concepts involved:** Arrays[^8], Change Listener[^9]
+* **Coding Concepts involved:** Arrays[^4], Change Listener[^5]
 
-* **Links to other Computing Patterns:** Systems Dynamics[^10]
+* **Links to other Computing Patterns:** Systems Dynamics[^6]
 
 * **Related Game Patterns:** You'll need to have added the **Add Enemies** pattern to your game before you can add this one.
 
@@ -191,8 +191,8 @@ Table 1.2.  Key Features of 3M Game Making Model
 
 The following resources exist for text-based coding using the Phaser javascript framework. While other programming environments can be used, these resources are based on learners using the glitch.com code playground website.
 
-* A splash page for Phaser / Glitch.com resources. This contains links to print outs, tutorials and activities - https://glitch-game-makers-manual.glitch.me/
-* An interactive starting template and grid of game design patterns that learners can add to the incomplete template - https://ggc-examples.glitch.me/
+* A splash page for Phaser / Glitch.com resources. This contains links to print outs, tutorials and activities[^7].
+* An interactive starting template and grid of game design patterns that learners can add to the incomplete template [^8].
 
 OTHER RESOURCES REMOVED FOR BREVITY
 
@@ -309,7 +309,8 @@ _**Gdps as an intermediate level design construct**_
 - GDPs create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate  communication, sustaining engagement, planning and division of labour.
 
 
-## Concluding observations
+## Conclusions
+
 
 I am compiling notes on the concluding chapter which will explore potential contributions to knowledge yielded by these findings, wider implications for educators and designers and limitations and future possible directions for this work.  
 
@@ -346,6 +347,7 @@ The nature of this study as collaborative, emergent and focused lends itself to 
 - While a separate program using a different software authoring tools was conducted, the processes are not compared in this thesis.
 - The specifics of the home education learning environment are not explored in this study to any great extent.
 - the limited number participants and lack of any specific goals of representation invites follow up research in different settings and using different methods to select participants.
+- While computational thinking and systems thinking were surfaced as potential elements of a learning dimensions map that emerged from later stages of the study, further work would be needed to investigate this potential in more detail.
 
 <!-- ### Present goals to complete thesis
 
@@ -362,23 +364,20 @@ I include a brief description of my next goals covering the next six months.
 -  Tensions emerging and evolving from 3M model
 Online at  http://tiny.cc/3m-tensions -->
 
+### Conclusion to this report
+
+I am writing this thesis using the git version control system which means that draft versions of the chapters are available online[^9]. This allows readers to check the current level of progress of the chapters mentioned above.  
+
+
 
 ## References
 
-
-[^1]: https://gamesforchange.org/studentchallenge/g4c-resources-hub/
-[^2]: https://www.casinclude.org/inclusive-resources/programming
-[^3]: https://network23.org/3m-gamemaking/an-overview-of-game-coding-tools/
-[^4]: https://mickfuzz.github.io/makecode-platformer-101/
-[^5]: https://glitch-game-makers-manual.glitch.me/
-[^6]: https://matthewbarr.co.uk/bartle/
-[^7]: https://mickfuzz.github.io/makecode-platformer-101/missions
-[^8]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#arrays
-[^9]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#change-listener
-[^10]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#systems-dynamics
-[^11]: https://mickfuzz.github.io/makecode-platformer-101
-[^12]: https://mickfuzz.github.io/phd4/book_chapters.html
-[^13]: https://glitch-game-makers-manual.glitch.me/
-[^14]: https://ggc-examples.glitch.me/
-[^15]: https://mickfuzz.github.io/makecode-platformer-101/
-[^16]: http://tiny.cc/3m-tensions
+[^1]: https://mickfuzz.github.io/makecode-platformer-101
+[^2]: https://mickfuzz.github.io/makecode-platformer-101/gamePatterns
+[^3]: https://glitch-game-makers-manual.glitch.me/
+[^4]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#arrays
+[^5]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#change-listener
+[^6]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#systems-dynamics
+[^7]: https://glitch-game-makers-manual.glitch.me/
+[^8]: https://ggc-examples.glitch.me/
+[^9]: https://mickfuzz.github.io/phd4/thesis_chapters.html
