--- a/_posts/other/2023-09-07-formalreview2023.md
+++ b/_posts/other/2023-09-07-formalreview2023.md
@@ -83,9 +83,9 @@ REMOVED FOR BREVITY
 
 ## Research Vignette - Evolution of Design
 
-My own research is an experimental approach to create a pedagogy which supports a community learning approach to game making. I have worked with young learners, local families, and undergraduate student helpers to evolve this game making design. A key driver of my research was to explore the potential to draw on family experience in learning activities by working with family members to jointly design games. I propose that this environment is a fertile research base to create learning activities with a wider potential application. To facilitate this goal, I have taken a design-based approach which acknowledges the importance of context in educational research [@brown_design_1992]. Design based research is a varied discipline which can take a multitude of forms [@mckenney_educational_2021]. The core elements include: research as an intervention, iteration, involvement of participants in the evolution of designs, and a flexibility of research outcome based on how events unfold [@easterday_design-based_2014]. One of the key motivations of this approach is to produce educational research that has a high utility for practitioners through developing theory that is rooted in contextual practice and which can produce new pedagogies and resources [@cobb_design_2003-4].  
+My own research is an experimental approach to create a pedagogy which supports a community learning approach to game making. I have worked with young learners, local families, and undergraduate student helpers to evolve this game making design. A key driver of my research was to explore the potential to draw on family experience in learning activities by working with family members to jointly design games. I propose that this environment is a fertile research base to create learning activities with a wider potential application. To facilitate this goal, I have taken a design-based approach which acknowledges the importance of context in educational research [@brown_design_1992]. Design based research is a varied discipline which can take a multitude of forms [@mckenney_educational_2021]. The core elements include: research as an intervention, iteration, involvement of participants in the evolution of designs, and a flexibility of research outcome based on how events unfold [@easterday_design-based_2014]. One of the key motivations of this approach is to produce educational research that has a high utility for practitioners through developing theory that is rooted in contextual practice and which can produce new pedagogies and resources [@cobb_design_2003].  
 
-Barab and Squire [-@barab_design-based_2004] describe the messiness of design-based research and how this creates a challenge to the researcher of how to present results in a coherent way which is of use to other practitioners. There is a tension between sticking closely to the context and specifics of the research and a more general, abstracted view. Here, I try to strike a balance, which stays concrete, but which also pulls from my observations a framework which can apply to other game making and creative project based approaches. Another guiding principle of design-based research - which is present in the techniques of design experiments, mutual appropriation and participatory action research - is that research participants also influence the ongoing design of the research [@barab_critical_2004; @cobb_design_2003-4; @downing-wilson_design_2011]. The design of my research experiment started from a very open position and evolved from several iterations of collaborative work with participants.
+Barab and Squire [-@barab_design-based_2004] describe the messiness of design-based research and how this creates a challenge to the researcher of how to present results in a coherent way which is of use to other practitioners. There is a tension between sticking closely to the context and specifics of the research and a more general, abstracted view. Here, I try to strike a balance, which stays concrete, but which also pulls from my observations a framework which can apply to other game making and creative project based approaches. Another guiding principle of design-based research - which is present in the techniques of design experiments, mutual appropriation and participatory action research - is that research participants also influence the ongoing design of the research  [@barab_critical_2004; @cobb_design_2003; @downing-wilson_design_2011]. The design of my research experiment started from a very open position and evolved from several iterations of collaborative work with participants.
 
 One experimental team consisted of Home Educating families. A second programme involved local primary school children in Year 6 (10-11 year old) classes. Given space constraints, in this chapter I focus on the pedagogical results rather than the observational data that has guided them. However, I include a short summary of data collection methods here. I have drawn on multiple methods including ethnographic journaling as a participant observer, participant interviews, and analysis of artefacts used and created. I have also undertaken analysis of participant actions via the videoing of the workshop area with a 360-degree video camera and capture of screen data and audio of the laptops used by participants. While the rich set of data has allowed the cross referencing of the many sources, it also presented a challenge of how to deal effectively with the large amounts of data being gathered. The use of a 360 camera reduced the amount of live video footage of interactions needed. Instead of multiple cameras pointed in different directions to capture participant interaction, participants were arranged in a square pointing inwards towards a central 360-degree camera. When triangulating data from various sources, I prioritised critical moments in depth which illuminated key themes. Analysis of interviews, observation journal notes and screen captures allowed me to identify tensions arising for facilitators and participants in the game making process. Analysis of these tensions allowed me to examine and revise teaching approaches and supporting resources. My approach involved not to remove all tensions - as some may be productive in the learning process - but rather to identify and avoid unproductive blockages. For example, in my journal notes I observed in pair work significant confusion and disputes regarding setting short-term project goals and frustration over lost work and time. As a response, I introduced a variety of tools and processes to aid the self-motivation and navigation of learners. Other examples of tensions include the following: difficulties in getting games ready for play-testing due to being lost in the detail of coding; an ability gap between features that participants wanted to add to the game and their technical abilities; the difficulty of supporting learners' different approaches to coding; and a lack of reflection on progress and appreciation of the complex learning dimensions involved in game making.
 
@@ -277,7 +277,7 @@ The concept of computational design patterns is well explored in the professiona
 
 Research in this area points to challenges of teaching the abstract nature of traditionally shared design patterns related to object oriented coding languages but points to visual methods and games as promising tactics [@azimullah_evaluating_2020; @da_cruz_silva_fostering_2019]
 
-The term game design patterns (GDP) is used in different ways. Kreimeier [@kreimeier_case_nodate] distinguishes content patterns from software engineering patterns. Software engineering patterns are used to structure code and keep it architecturally neat thus facilitating code sharing and extension. These patterns would be invisible to the end player of the game. Content patterns describe common patterns of game play and design that are visible to the player.
+The term game design patterns (GDP) is used in different ways. Kreimeier [@kreimeier_case_2002] distinguishes content patterns from software engineering patterns. Software engineering patterns are used to structure code and keep it architecturally neat thus facilitating code sharing and extension. These patterns would be invisible to the end player of the game. Content patterns describe common patterns of game play and design that are visible to the player.
 
 <!-- Indeed players may become very familiar with these GDPs as they build their literacy as players about what they like or dislike about game they play.  -->
 
@@ -291,10 +291,10 @@ The chapter follows the, through necessity to cover more ground, more superficia
 
 The process of informal goal setting, flexible design practices and repeated playtesting is a key link to the value of exploring game design patterns. Each iteration of the implementation of a design feature or GDP in this model, is a microcosm of design practice. In the language of activity theory this can be viewed as germ cell of activity -  like a 'minimum viable' process which can be repeated iteratively. Ideally, each iteration adapts the project whilst maintaining its viability as a playable game.
 
-The first section explores the use of GDP in context through the analysis of a vignette of interactions and a systematic description of varied uses of GDP. A summary created for slides for the Manchester Games Network is taken s is presented as a  of use of GDPs
-https://docs.google.com/document/d/1mbnV2pjT_7gq4Mcss8gQJ78avHktnA1P3HCJTkiJefk/edit
+The first section explores the use of GDP in context through the analysis of a vignette of interactions and a systematic description of varied uses of GDP. A summary of the participants and faciliator use of GDPs is presented in the following table.
 
-INSERT IMAGE OF TABLE
+![Figure 1.3. Synthesising diagram of 3M Game Making Model](./../thesis_chapters/Pictures/gdp_summary.png){ width=98% }
+
 
 #### Extracted slides from PGR conference presentation on Gdps as an intermediate level design construct
 
@@ -311,9 +311,7 @@ _**Gdps as an intermediate level design construct**_
 
 ## Conclusions
 
-
-I am compiling notes on the concluding chapter which will explore potential contributions to knowledge yielded by these findings, wider implications for educators and designers and limitations and future possible directions for this work.  
-
+As work progresses, I am compiling an outline of the concluding chapter of the thesis which will explore potential contributions to knowledge yielded by these findings, wider implications for educators and designers and limitations and future possible directions for this work.  
 
 ### Contributions to knowledge
 
